# tree-sitter-asciimath

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  copy_rust_lib.js  devlog.md  go.mod  grammar.js  grammar_new.js  package-lock.json  package.json  parser.exp  parser.lib  pnpm-lock.yaml  pyproject.toml  setup.py  symbols-config.json  tree-sitter.json
bindings/c/: Makefile  build.sh  example.c  tree-sitter-asciimath.pc.in  tree_sitter_asciimath.c  tree_sitter_asciimath.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding.spec.js  binding_test.js  index.d.ts  index.js
bindings/python/: example_ffi.py  test_ffi.py
bindings/python/tests/: test_binding.py  test_ffi.py
bindings/python/tree_sitter_asciimath/: __init__.py  __init__.pyi  binding.c  ffi.py  to_latex.py
bindings/rust/: build.rs  lib.rs  node_type.rs  to_latex.rs
bindings/swift/TreeSitterAsciimathTests/: TreeSitterAsciimathTests.swift
bindings/test_cases/: common_cases.jsonc  common_cases.yml
examples/: def_new.txt  expressions.txt  grammar_definition.txt  test_basic.txt  test_binary.txt  test_complex.txt  test_fractions.txt  test_greek.txt  test_matrices.txt  test_recursive_bracket.txt  test_subscript_superscript.txt  test_unary.txt
identifiers/: ascii-escape.js  binary-operators.js  categories.js  greek-letters.js  index.js  logic-symbols.js  math-constants.js  misc-symbols.js  set-operators.js  unary-binary-symbols.js
scripts/: copy_rust_lib.js  generate-symbols.js  validate-identifiers.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic_arithmetic.txt  big_equal.txt  binary_complex.txt  det.txt  differential_expr.txt  factorial_prec.txt  frac_complex.txt  fractions.txt  frozen.txt  left_cases.txt  matrix.txt  matrix_complex.txt  multiline_expr.txt  numbers.txt  recursive_bracket.txt  simple_expression.txt  strings.txt  supsubscripts.txt  unary.txt  vector.txt  whitespace.txt
utils/: expression-builder.js
