[package]
name = "tree-sitter-asciimath"
description = "Asciimath grammar for tree-sitter"
version = "0.1.0"
authors = ["widcardw <widcardw@foxmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "asciimath"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/widcardw/tree-sitter-asciimath"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tree-sitter = "0.25.10"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
