[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-asciimath"
description = "Asciimath grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "asciimath"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "widcardw", email = "widcardw@foxmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"
dependencies = [
    "pytest>=8.4.2",
    "tree-sitter>=0.25.2",
]

[project.urls]
Homepage = "https://github.com/widcardw/tree-sitter-asciimath"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
