[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-asciimath"
description = "Asciimath grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "asciimath"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "widcardw", email = "widcardw@foxmail.com" }]
requires-python = ">=3.12"
license.text = "MIT"
readme = "README.md"
dependencies = [
    "objprint>=0.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "setuptools>=80.9.0",
    "tree-sitter>=0.25.2",
    "wheel>=0.45.1",
]

[project.urls]
Homepage = "https://github.com/widcardw/tree-sitter-asciimath"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp312-*"
build-frontend = "build"
